--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
               <span class="user-nav__notification">13</span>
             </div>
             <div class="user-nav__user">
-              <img src="../assets/images/user.jpg" alt="User Photo" class="user-nav__user-photo">
-              <span class="user-nav__user-name">Jonas</span>
+              <img src="../assets/images/user.png" alt="User Photo" class="user-nav__user-photo">
+              <span class="user-nav__user-name">Steven</span>
             </div>
           </nav>
         </header>
@@ -86,7 +86,55 @@
             </div>
           </nav>
           <main class="hotel-view">
-            Hotel View
+            <div class="gallery">
+              <figure class="gallery__item">
+                <img src="../assets/images/hotel-1.jpg" alt="Phote of Hotel 1" class="gallery__photo">
+              </figure>
+              <figure class="gallery__item">
+                <img src="../assets/images/hotel-2.jpg" alt="Phote of Hotel 2" class="gallery__photo">
+              </figure>
+              <figure class="gallery__item">
+                <img src="../assets/images/hotel-3.jpg" alt="Phote of Hotel 3" class="gallery__photo">
+              </figure>
+            </div>
+
+            <div class="overview">
+              <h1 class="overview__heading">
+                Hotel Las Palmas
+              </h1>
+
+              <div class="overview__stars">
+                <svg class="overview__icon-star">
+                  <use xlink:href="../assets/images/sprite.svg#icon-star"></use>
+                </svg>
+                <svg class="overview__icon-star">
+                  <use xlink:href="../assets/images/sprite.svg#icon-star"></use>
+                </svg>
+                <svg class="overview__icon-star">
+                  <use xlink:href="../assets/images/sprite.svg#icon-star"></use>
+                </svg>
+                <svg class="overview__icon-star">
+                  <use xlink:href="../assets/images/sprite.svg#icon-star"></use>
+                </svg>
+                <svg class="overview__icon-star">
+                  <use xlink:href="../assets/images/sprite.svg#icon-star"></use>
+                </svg>
+              </div>
+
+              <div class="overview__location">
+                <svg class="overview__icon-location">
+                  <use xlink:href="../assets/images/sprite.svg#icon-location-pin"></use>
+                </svg>
+                <button class="btn-inline">Albufeira, Portugal</button>
+              </div>
+
+              <div class="overview__rating">
+                <div class="overview__rating-average">
+                  8.6
+                </div>
+                <div class="overview__rating-count">429 votes</div>
+              </div>
+            </div>
           </main>
         </div>
       </div>
